# rtic-twim-twis-dma-demo

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
