[package]
edition = "2021"
name = "rtic-twis-dma-demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = {version = "0.7.2", features = ["device"]}
cortex-m-rtic = {version = "1.1.3", default-features = false}
nrf52840-hal = {version = "0.16.0", features = ["rt"]}
rtt-target = {version = "0.3.1", features = ["cortex-m"]}

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.7"
